--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "jeroennoten/laravel-adminlte": "^1.18",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.3.0"
+        "laravelcollective/html": "^5.3.0",
+        "nesbot/carbon": "~1.18"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
